Added notebook for an example of text generation using FLEXible. Still needs to be completed. Also changed the name of the classification's notebook. Added some changes on FlexPool.

--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -150,20 +150,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def initialize_server_model(flex_model, data, *args, **kwargs):\n",
+    "def initialize_server_model(flex_model, *args, **kwargs):\n",
     "    print(\"Initializing model server.\")\n",
-    "    model = \"https://tfhub.dev/google/nnlm-en-dim50/2\"\n",
+    "    # model = \"https://tfhub.dev/google/nnlm-en-dim50/2\" # Not working right now, but it's a lower model.\n",
+    "    model = \"https://tfhub.dev/google/nnlm-en-dim128-with-normalization/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
-    "    # model = tf.keras.Sequential()\n",
-    "    # model.add(hub_layer)\n",
-    "    # model.add(tf.keras.layers.Dense(16, ACTIVATE))\n",
-    "    # model.add(tf.keras.layers.Dense(1))\n",
-    "    # print(model.summary())\n",
-    "    # flex_model['model'] = model\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(hub_layer)\n",
     "    model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
     "    model.add(tf.keras.layers.Dense(1))\n",
+    "    model.compile(optimizer='adam',\n",
+    "                    loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
+    "                    metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name='accuracy')])\n",
     "    flex_model['model'] = model"
    ]
   },
@@ -184,8 +182,8 @@
    "source": [
     "def deploy_model_to_clients(server_model, clients_model, *args, **kwargs):\n",
     "    print(\"Initializing model at client.\")\n",
-    "    for client_model in clients_model:\n",
-    "        clients_model[client_model] = deepcopy(server_model)"
+    "    for client_id in clients_model:\n",
+    "        clients_model[client_id] = deepcopy(server_model)"
    ]
   },
   {
@@ -213,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients._models"
+    "clients._actors.keys() # Check the clients that will participate in the training of the federated model."
    ]
   },
   {
@@ -229,12 +227,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, data, *args, **kwargs):\n",
+    "def train(client_model, data, *args, **kwargs):\n",
     "    print(\"Training model at client.\")\n",
-    "    model = model['model']\n",
-    "    model.compile(optimizer='adam',\n",
-    "                    loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
-    "                    metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name='accuracy')])\n",
+    "    model = client_model['model']\n",
     "    # client_dataset = tf.data.Dataset.from_tensor_slices((data.X_data, data.y_data))\n",
     "    X_data = data.X_data\n",
     "    y_data = data.y_data\n",
@@ -248,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map_procedure(train, batch_size=512, epochs=10)"
+    "clients.map_procedure(train, batch_size=512, epochs=1)"
    ]
   },
   {
@@ -273,6 +268,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "aggregator._models['server_10865309248']:<keras.engine.sequential.Sequential object at 0x107f65340>}\n",
+    "aggregator._models['server_10865309248']['model']:<keras.engine.sequential.Sequential object at 0x107f65340>}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The **map_procedure** function from *FlexPool* "
    ]
   },
@@ -282,19 +285,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aggregate_weights(client_model, aggregator_model, **kwargs):\n",
-    "    if 'weights' not in list(aggregator_model.keys())[0]:\n",
+    "def collect_weights(client_model, aggregator_model, **kwargs):\n",
+    "    # Here the server and the aggregator are the same, so we need to take the ID from the server\n",
+    "    # to select the model.\n",
+    "    # As the server has a unique ID, we don't know the ID from the server till it's created, so we\n",
+    "    # need to take the ID in this way.\n",
+    "    if 'weights' not in aggregator_model[\"server\"].keys():\n",
     "        print(\"Aggregating weights.\")\n",
-    "        # print(aggregator_model[list(aggregator_model).keys()[0]])\n",
-    "        aggregator_model[list(aggregator_model.keys())[0]]['weights'] = []\n",
-    "        aggregator_model['weights'] = []\n",
-    "    # print(aggregator_model[list(aggregator_model.keys())[0]])\n",
-    "    # aggregator_model['weights'].append(client_model['model'].get_weights())\n",
-    "    aggregator_model[list(aggregator_model.keys())[0]]['weights'].append(client_model['model'].get_weights())\n",
-    "    if len(aggregator_model[list(aggregator_model.keys())[0]]['weights']) == kwargs['clients_training']:\n",
-    "        aggregator_model[list(aggregator_model.keys())[0]]['weights'] = np.mean(np.array(aggregator_model[list(aggregator_model.keys())[0]]['weights'], axis=0))\n",
-    "    # if len(aggregator_model['weights']) == kwargs['clients_training']:\n",
-    "    #     aggregator_model['weights'] = np.mean(np.array(aggregator_model['weights'], axis=0))"
+    "        aggregator_model[\"server\"]['weights'] = []\n",
+    "\n",
+    "    aggregator_model[\"server\"]['weights'].append(client_model['model'].get_weights())"
    ]
   },
   {
@@ -303,7 +303,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map_procedure(aggregate_weights, aggregator, clients_training=len(clients._models.keys()))"
+    "clients.map_procedure(collect_weights, aggregator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**# TODO: Hace falta función de COLECCIÓN de pesos y otra función de AGREGACIÓN de los pesos. Así queda más claro cual es más claro el proceso de colección y cuál es el procedimiento de agregación. Así en el proceso de colección, podemos filtrar por clientes que tengan un modelo inicializado o no.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aggregate_weights(agg_model, *args):\n",
+    "    # agg_model[\"weights\"] = np.mean(np.array(agg_model['weights']), axis=0)\n",
+    "    agg_model[\"model\"].set_weights(np.mean(np.array(agg_model['weights']), axis=0))\n",
+    "    del agg_model[\"weights\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregator.map_procedure(aggregate_weights)"
    ]
   },
   {
@@ -324,7 +352,7 @@
     "    if 'weights' not in aggregator_model.keys():\n",
     "        raise ValueError('Aggregator should have weights')\n",
     "    for serv in server_model:\n",
-    "        server_model[serv]['model'].set_weights(aggregator_model['weights'][0])"
+    "        server_model[serv]['model'].set_weights(aggregator_model['weights'])"
    ]
   },
   {
@@ -341,15 +369,6 @@
    "metadata": {},
    "source": [
     "Now it's turn from the server to update the weights from the clients models and then evaluate the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clients._models"
    ]
   },
   {
@@ -388,12 +407,24 @@
    "outputs": [],
    "source": [
     "def evaluate_model(model, data, *args, **kwargs):\n",
-    "    print(\"Evaluating model at client.\")\n",
     "    model = model['model']\n",
+    "    if data is not None:\n",
+    "        print(\"Evaluating model at client.\")\n",
+    "        results_local = model.evaluate(data.X_data, data.y_data)\n",
+    "        print(f\"Results at client on client's data: {results_local}\")\n",
+    "    else:\n",
+    "        print(\"Evaluating model at server\")\n",
     "    results = model.evaluate(kwargs['test_examples'], kwargs['test_labels'])\n",
-    "    results_local = model.evaluate(data.X_data, data.y_data)\n",
-    "    print(f\"Results at client on test data: {results}\")\n",
-    "    print(f\"Results at client on client's data: {results_local}\")"
+    "    print(f\"Results on test data: {results}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "server.map_procedure(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
    ]
   },
   {
@@ -426,10 +457,12 @@
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
     "        pool.clients.map_procedure(train, batch_size=batch_size, epochs=epochs)\n",
-    "        pool.clients.map_procedure(aggregate_weights, pool.aggregators, clients_training=len(pool.clients._models.keys()))\n",
-    "        pool.aggregators.map_procedure(send_aggregated_weights, pool.servers)\n",
+    "        pool.clients.map_procedure(evaluate_model, test_examples=test_examples, test_labels=test_labels)\n",
+    "        pool.clients.map_procedure(collect_weights, pool.aggregators)\n",
+    "        pool.aggregators.map_procedure(aggregate_weights)\n",
+    "        # pool.aggregators.map_procedure(send_aggregated_weights, pool.servers) # No hace falta ahora\n",
     "        pool.servers.map_procedure(deploy_global_model_to_clients, pool.clients)\n",
-    "        pool.clients.map_procedure(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "        pool.servers.map_procedure(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
    ]
   },
   {
