Changed map_procedure to map.

--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map_procedure(deploy_model_to_clients, clients)"
+    "server.map(deploy_model_to_clients, clients)"
    ]
   },
   {
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map_procedure(train, batch_size=512, epochs=1)"
+    "clients.map(train, batch_size=512, epochs=1)"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **map_procedure** function from *FlexPool* "
+    "The **map** function from *FlexPool* "
    ]
   },
   {
@@ -303,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map_procedure(collect_weights, aggregator)"
+    "clients.map(collect_weights, aggregator)"
    ]
   },
   {
@@ -331,14 +331,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator.map_procedure(aggregate_weights)"
+    "aggregator.map(aggregate_weights)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that the aggregator has the aggregated weights, she should send it to the server. To do so, we will use the *map_procedure* function to set the new weights to the server model."
+    "Now that the aggregator has the aggregated weights, she should send it to the server. To do so, we will use the *map* function to set the new weights to the server model."
    ]
   },
   {
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator.map_procedure(send_aggregated_weights, server)"
+    "aggregator.map(send_aggregated_weights, server)"
    ]
   },
   {
@@ -390,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map_procedure(deploy_global_model_to_clients, clients)"
+    "server.map(deploy_global_model_to_clients, clients)"
    ]
   },
   {
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map_procedure(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "server.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map_procedure(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
    ]
   },
   {
@@ -453,16 +453,16 @@
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):\n",
     "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model)\n",
-    "    pool.servers.map_procedure(deploy_model_to_clients, pool.clients)\n",
+    "    pool.servers.map(deploy_model_to_clients, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
-    "        pool.clients.map_procedure(train, batch_size=batch_size, epochs=epochs)\n",
-    "        pool.clients.map_procedure(evaluate_model, test_examples=test_examples, test_labels=test_labels)\n",
-    "        pool.clients.map_procedure(collect_weights, pool.aggregators)\n",
-    "        pool.aggregators.map_procedure(aggregate_weights)\n",
-    "        # pool.aggregators.map_procedure(send_aggregated_weights, pool.servers) # No hace falta ahora\n",
-    "        pool.servers.map_procedure(deploy_global_model_to_clients, pool.clients)\n",
-    "        pool.servers.map_procedure(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "        pool.clients.map(train, batch_size=batch_size, epochs=epochs)\n",
+    "        pool.clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)\n",
+    "        pool.clients.map(collect_weights, pool.aggregators)\n",
+    "        pool.aggregators.map(aggregate_weights)\n",
+    "        # pool.aggregators.map(send_aggregated_weights, pool.servers) # No hace falta ahora\n",
+    "        pool.servers.map(deploy_global_model_to_clients, pool.clients)\n",
+    "        pool.servers.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
    ]
   },
   {
