--- a/notebooks/flex_text_generation_torch_demo.ipynb
+++ b/notebooks/flex_text_generation_torch_demo.ipynb
@@ -403,7 +403,7 @@
     "- Aggregate weights\n",
     "- Evaluate model\n",
     "\n",
-    "This functions aren't available in the FlexPool class, as they will be different for each model, so the user must create the functions and apply them to the actors using the *map_procedure* function from FlexPool."
+    "This functions aren't available in the FlexPool class, as they will be different for each model, so the user must create the functions and apply them to the actors using the *map* function from FlexPool."
    ]
   },
   {
@@ -460,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the model is defined, we have to define the function that will initialize the model for each client that participate in the training phase. After defining this function, we can use the function *map_procedure* from FlexPool, to "
+    "Once the model is defined, we have to define the function that will initialize the model for each client that participate in the training phase. After defining this function, we can use the function *map* from FlexPool, to "
    ]
   },
   {
@@ -489,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map_procedure(initialize_model, clients) # As we have only one server, we take the first model only"
+    "server.map(initialize_model, clients) # As we have only one server, we take the first model only"
    ]
   },
   {
@@ -549,14 +549,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map_procedure(train, batch_size=256, epochs=10, tokenizer=tokenizer, itos=vocab.get_itos(), stoi=vocab.get_stoi(), sequence_len=4)"
+    "clients.map(train, batch_size=256, epochs=10, tokenizer=tokenizer, itos=vocab.get_itos(), stoi=vocab.get_stoi(), sequence_len=4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have traint all the models available for training, so it's time to aggregate them. We have to create a function and then apply it with the *map_procedure* from FlexPool. In this case, the source pool will be the clients, and the destiny pool the aggregator. \n",
+    "Now we have traint all the models available for training, so it's time to aggregate them. We have to create a function and then apply it with the *map* from FlexPool. In this case, the source pool will be the clients, and the destiny pool the aggregator. \n",
     "\n",
     "To get the weights of a model on pytorch, we can use model.parameters(), or model.named_parameters() if we want to get the layer's name too. "
    ]
