Added comments to the notebook to make it more readable.

--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FLEXible tutorial: Text classification using Tensorflow\n",
+    "\n",
+    "FLEXible is a library to federate models. We offer the tools to load and federate data or to load federated data, and the tools to create a federated environment. The user must define the model and the *communication primitives* to train the model in a federated environment. This primitives can be expressed in the following steps:\n",
+    "- initialization: Initialize the model in the server.\n",
+    "- deplot model: Deploy the model to the clients.\n",
+    "- training: Define the train function.\n",
+    "- collect the weights: Collect the weights of the clients params to aggregate them later.\n",
+    "- aggregate the weights: Use an aggregation method to aggregte the collected weights.\n",
+    "- deploy model: Deploy the model with the updated weights to the clients.\n",
+    "- evaluate: Define the evaluate function.\n",
+    "\n",
+    "In this notebook, we show how to implement this primitives and how to use FLEXible in orther to federate a model using TensorFlow. In this way, we will train a model using multiple clients, but without sharing any data between clients. We will follow this [tutorial](https://www.tensorflow.org/hub/tutorials/tf2_text_classification#build_the_model) from the TensorFlow tutorials for text classification. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -50,6 +75,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download the IMBD dataset\n",
+    "\n",
+    "As used in the tutorial from TensorFlow, we will use the IMBD dataset. This dataset contains reviews about movies, and the *sentiment* associated to them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -75,7 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create the FlexDataObject"
+    "# Create the FlexDataObject\n",
+    "\n",
+    "As we are using a centrilized dataset, we have to federate it. To federate the data we need to create a basic data object for FLEXible that is called **FlexDataObject**. To create a  **FlexDataObject** we need to have the data as *numpy.arrays*."
    ]
   },
   {
@@ -88,12 +124,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To ensure that we created the **FlexDataObject**, we can validate it before federating it, but this step will be done later anyways. The validate function does not return anything, it raises error if there is a problem with the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "flex_data.validate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the FlexDataset\n",
+    "\n",
+    "Once we hace the FlexDataObject, we can federate the data. We can federate the data in multiple ways, to know more about how to do this, check the [tutorial for FlexDataset](https://github.com/FLEXible-FL/FLEX-framework/blob/main/notebooks/flex_dataset_demo.ipynb). In this example we will use the **FlexDataDistribution** to create an iid_distribution using the function *from_config*, that it's the one recommended for creating multiple ways of federating the data. "
    ]
   },
   {
@@ -112,6 +164,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also, we could just use the function *iid_distribution* from FlexDataDistribution, that uses the same configuration that we've just used."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -124,24 +183,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Create the architecture\n",
+    "\n",
     "### Generating the clients and the model to train.\n",
     "\n",
     "Once we've federated the dataset, we have to create the FlexPool. The FlexPool class simulates a real-time scenario for federated learning, so it is in charge of the communications across the actors. The class FlexPool will assign to each actor a role (client, aggregator, server), so they can communicate during the training phase.\n",
     "\n",
     "Please, check the notebook about the actors (TODO: Hacer notebook actores y sus relaciones) to know more about the actors and their relationships in FLEXible.\n",
     "\n",
-    "To create a Pool of actors, we need to have a federated dataset, like we've just done, and a model to initialize in the server side, because the server will send the model to the clients so they can train the model. As we have the federated dataset (flex_dataset), we will now create the model.\n",
+    "To create a Pool of actors, we need to have a federated dataset, like we've just done, and the model to initialize in the server side, because the server will send the model to the clients so they can train the model. As we have the federated dataset (flex_dataset), we will now create the model.\n",
     "\n",
-    "In this case, we will use a model from the tensorflow hub, so we dont have worry about the preprocessing."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from flex.pool import FlexPool"
+    "In this case, we will use a model from the tensorflow hub, so we dont have worry about the preprocessing for the text."
    ]
   },
   {
@@ -166,12 +218,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we have compiled the model in the initialize function. This is recommended so we can use the model in the server for further evaluation.\n",
+    "\n",
+    "In this tutorial we will follow the client-server architecture offered in the FlexDataDistribution."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deploy model to clients\n",
+    "\n",
+    "We have to create the function that will deploy the model to the clients. "
    ]
   },
   {
@@ -187,6 +257,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To work in an easier way, FlexPool let the use to have organized pools, such as clients, aggregators or servers. This helps to understand how we are connecting the actors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -194,6 +271,13 @@
    "source": [
     "clients = flex_pool.clients\n",
     "server = flex_pool.servers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To apply all the primitives, such as the deploy step, we will use the **map** function from *FlexPool*. The map function works in the following way: the pool that calls the function map, is the one that will send a message to the destiny pool. If we don't specify it to any pool, no destiny pool, it will \"send\" the message to the same pool that it's calling the map function. This is needed if we want to tell the clients to train/evaluate the model."
    ]
   },
   {
@@ -218,7 +302,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One the model is deployed on the clients, is time to create the training function."
+    "### Train the clients models\n",
+    "\n",
+    "One the model is deployed on the clients, is time to create the training function. As you can see, we use the *fit* function from the TensorFlow model, so we don't need to create it, as we may need in PyTorch."
    ]
   },
   {
@@ -230,11 +316,17 @@
     "def train(client_model, data, *args, **kwargs):\n",
     "    print(\"Training model at client.\")\n",
     "    model = client_model['model']\n",
-    "    # client_dataset = tf.data.Dataset.from_tensor_slices((data.X_data, data.y_data))\n",
     "    X_data = data.X_data\n",
     "    y_data = data.y_data\n",
     "    history = model.fit(X_data, y_data, epochs=kwargs['epochs'], batch_size=kwargs['batch_size'],\n",
     "                verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will train the model in the clients side. We will use the *map function* to tell the clients to train the model, and, to do so, we just need to use this function from the clients pool."
    ]
   },
   {
@@ -243,14 +335,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(train, batch_size=512, epochs=1)"
+    "clients.map(train, batch_size=512, epochs=10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have trained the model we have to aggregate the weights. To do so, clients will send the weights to the aggregator, and shed will perform the aggregation told. For the tutorial, we will implement the FevAvg aggregation mechanism.\n",
+    "\n",
+    "### Aggregate the models\n",
+    "\n",
+    "Now that we have trained the model we have to aggregate the weights. To do so, clients will send the weights to the aggregator, and she will perform the aggregation told. For the tutorial, we will implement the FevAvg aggregation mechanism.\n",
     "\n",
     "First, we select the aggregator"
    ]
@@ -268,15 +363,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "aggregator._models['server_10865309248']:<keras.engine.sequential.Sequential object at 0x107f65340>}\n",
-    "aggregator._models['server_10865309248']['model']:<keras.engine.sequential.Sequential object at 0x107f65340>}\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The **map** function from *FlexPool* "
+    "\n",
+    "\n",
+    "Before applying the FedAvg aggregation method, we have to collect all the parameters (or weights) from the clients models."
    ]
   },
   {
@@ -310,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**# TODO: Hace falta función de COLECCIÓN de pesos y otra función de AGREGACIÓN de los pesos. Así queda más claro cual es más claro el proceso de colección y cuál es el procedimiento de agregación. Así en el proceso de colección, podemos filtrar por clientes que tengan un modelo inicializado o no.**"
+    "Now we can aggregate the weights using the FedAvg method. Now that the aggregator has the aggregated weights, she should send it to the server, but, as server and aggregator are the same in our architecture, we will put this step with the fedavg method."
    ]
   },
   {
@@ -319,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aggregate_weights(agg_model, *args):\n",
+    "def fedavg_aggregation(agg_model, *args):\n",
     "    # agg_model[\"weights\"] = np.mean(np.array(agg_model['weights']), axis=0)\n",
     "    agg_model[\"model\"].set_weights(np.mean(np.array(agg_model['weights']), axis=0))\n",
     "    del agg_model[\"weights\"]"
@@ -331,43 +420,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator.map(aggregate_weights)"
+    "aggregator.map(fedavg_aggregation)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that the aggregator has the aggregated weights, she should send it to the server. To do so, we will use the *map* function to set the new weights to the server model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def send_aggregated_weights(aggregator_model, server_model, *args, **kwargs):\n",
-    "    print(\"Sending aggregated weights to the server.\")\n",
-    "    if 'weights' not in aggregator_model.keys():\n",
-    "        raise ValueError('Aggregator should have weights')\n",
-    "    for serv in server_model:\n",
-    "        server_model[serv]['model'].set_weights(aggregator_model['weights'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aggregator.map(send_aggregated_weights, server)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Deploy and evaluate the model.\n",
+    "\n",
     "Now it's turn from the server to update the weights from the clients models and then evaluate the model."
    ]
   },
@@ -440,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Putting it all together\n",
+    "# Putting it all together\n",
     "\n",
     "You just have trained a model for 1 round using FLEXible. Now, you could set up all together in a function and iterate for multiple rounds."
    ]
@@ -460,7 +521,6 @@
     "        pool.clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)\n",
     "        pool.clients.map(collect_weights, pool.aggregators)\n",
     "        pool.aggregators.map(aggregate_weights)\n",
-    "        # pool.aggregators.map(send_aggregated_weights, pool.servers) # No hace falta ahora\n",
     "        pool.servers.map(deploy_global_model_to_clients, pool.clients)\n",
     "        pool.servers.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
    ]
