--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -22,31 +22,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from flex.data import FlexDataObject, FlexDataset, FlexDatasetConfig, FlexDataDistribution\n",
-    "from flex.pool import FlexPool, FlexModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(tf.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(tfds.__version__)"
+    "As usual in every experiment, the first step is to load the dataset we will use. In this case we will use the dataset **imdb_reviews** for a supervised text classification model, this tutorial is a federated adaptation of the one provided [here](https://www.tensorflow.org/hub/tutorials/tf2_text_classification#build_the_model)."
    ]
   },
   {
@@ -59,15 +38,8 @@
     "                                    batch_size=-1, as_supervised=True)\n",
     "\n",
     "train_examples, train_labels = tfds.as_numpy(train_data)\n",
-    "test_examples, test_labels = tfds.as_numpy(test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_examples, test_labels = tfds.as_numpy(test_data)\n",
+    "\n",
     "print(f\"Training entries: {len(train_examples)}, test entries: {len(test_examples)}\")"
    ]
   },
@@ -75,7 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create the FlexDataObject"
+    "# 1) From centralized data to federated data\n",
+    "Firstly and foremost, we need to encapsulare our centralized dataset as numpy arrays in a FlexDataObject, to split it for every federated client."
    ]
   },
   {
@@ -84,47 +57,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from flex.data import FlexDataObject\n",
+    "\n",
     "flex_data = FlexDataObject(X_data=train_examples, y_data=train_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flex_data.validate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = FlexDatasetConfig(seed=0)\n",
-    "config.n_clients = 2\n",
-    "config.replacement = False # ensure that clients do not share any data\n",
-    "config.client_names = ['client1', 'client2']\n",
-    "# config.weights = [0.2] * config.n_clients # each client has only 20% of its assigned class\n",
-    "config.weights = None\n",
-    "flex_dataset = FlexDataDistribution.from_config(cdata=flex_data, config=config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# flex_dataset = FlexDataDistribution.iid_distribution(flex_data, n_clients=2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generating the clients and the model to train.\n",
+    "In order to federate our dataset, we need to specify how we want to split it among clients in a ``FlexDatasetConfig`` object. For this case we want to split it evenly between 2 clients, that is, an iid distribution. To apply our config to our centralized dataset, we use ``FlexDataDistribution.from_config``. A more complete description of the configuration options of ``FlexDatasetConfig`` to federate a dataset can be found in the documentation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.data import FlexDatasetConfig, FlexDataDistribution\n",
+    "\n",
+    "config = FlexDatasetConfig(seed=0)\n",
+    "config.n_clients = 2\n",
+    "config.replacement = False # ensure that clients do not share any data\n",
+    "config.client_names = ['client1', 'client2'] # Optional\n",
+    "flex_dataset = FlexDataDistribution.from_config(cdata=flex_data, config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, there is a shortcut, if we want to split the dataset iid between the clients we can directly use ``FlexDataDistribution.iid_distribution`` with the number of clients and our centralized data stored in a ``FlexDataObject``. Note that in this case the name of the clients are generated automatically: client number ``i`` gets id: ``f\"client_{i}\"``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.data import FlexDataDistribution\n",
+    "\n",
+    "flex_dataset = FlexDataDistribution.iid_distribution(flex_data, n_clients=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2) Federating a model with FLEXible\n",
     "\n",
     "Once we've federated the dataset, we have to create the FlexPool. The FlexPool class simulates a real-time scenario for federated learning, so it is in charge of the communications across the actors. The class FlexPool will assign to each actor a role (client, aggregator, server), so they can communicate during the training phase.\n",
     "\n",
@@ -132,7 +114,9 @@
     "\n",
     "To create a Pool of actors, we need to have a federated dataset, like we've just done, and a model to initialize in the server side, because the server will send the model to the clients so they can train the model. As we have the federated dataset (flex_dataset), we will now create the model.\n",
     "\n",
-    "In this case, we will use a model from the tensorflow hub, so we dont have worry about the preprocessing."
+    "In this case, we will use a model from the tensorflow hub, so we dont have to worry about coding it. We also consider a federated setup commonly know as client server architecture, where a server orchestrates the training of federated clients in every round.\n",
+    "\n",
+    "In the following, we create a client server architecture and provide a function to initialize the server model."
    ]
   },
   {
@@ -141,18 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import FlexPool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initialize_server_model(flex_model, *args, **kwargs):\n",
-    "    print(\"Initializing model server.\")\n",
-    "    # model = \"https://tfhub.dev/google/nnlm-en-dim50/2\" # Not working right now, but it's a lower model.\n",
+    "def initialize_server_model(flex_model, *args):\n",
+    "    print(\"Initializing server model.\")\n",
     "    model = \"https://tfhub.dev/google/nnlm-en-dim128-with-normalization/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
     "    model = tf.keras.Sequential()\n",
@@ -171,7 +145,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model)"
+    "from flex.pool import FlexPool\n",
+    "\n",
+    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model)\n",
+    "clients = flex_pool.clients\n",
+    "server = flex_pool.servers\n",
+    "print(f\"Server node is indentified by {server.actor_ids}\")\n",
+    "print(f\"Client nodes are identified by {clients.actor_ids}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we initialize the model in the clients:"
    ]
   },
   {
@@ -181,19 +168,9 @@
    "outputs": [],
    "source": [
     "def deploy_model_to_clients(server_model, clients_model, *args, **kwargs):\n",
-    "    print(\"Initializing model at client.\")\n",
+    "    print(\"Initializing model at a client\")\n",
     "    for client_id in clients_model:\n",
     "        clients_model[client_id] = deepcopy(server_model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clients = flex_pool.clients\n",
-    "server = flex_pool.servers"
    ]
   },
   {
@@ -206,19 +183,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clients._actors.keys() # Check the clients that will participate in the training of the federated model."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One the model is deployed on the clients, is time to create the training function."
+    "Once the model is deployed on the clients, is time to create the training function."
    ]
   },
   {
@@ -227,14 +195,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(client_model, data, *args, **kwargs):\n",
+    "def train(client_model, client_data, batch_size=256, epochs=1):\n",
     "    print(\"Training model at client.\")\n",
     "    model = client_model['model']\n",
-    "    # client_dataset = tf.data.Dataset.from_tensor_slices((data.X_data, data.y_data))\n",
-    "    X_data = data.X_data\n",
-    "    y_data = data.y_data\n",
-    "    history = model.fit(X_data, y_data, epochs=kwargs['epochs'], batch_size=kwargs['batch_size'],\n",
-    "                verbose=1)"
+    "    X_data = client_data.X_data\n",
+    "    y_data = client_data.y_data\n",
+    "    history = model.fit(X_data, y_data, epochs=epochs, batch_size=batch_size, verbose=1)"
    ]
   },
   {
@@ -243,16 +209,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(train, batch_size=512, epochs=1)"
+    "clients.map(train, batch_size=512, epochs=2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have trained the model we have to aggregate the weights. To do so, clients will send the weights to the aggregator, and shed will perform the aggregation told. For the tutorial, we will implement the FevAvg aggregation mechanism.\n",
+    "Now that we have trained the model we have to aggregate the weights. To do so, clients will send the weights to the aggregator, and she will perform the aggregation step. For the tutorial, we will implement the FevAvg aggregation mechanism. That is, the aggreation step is split in two steps, 1) for collecting the weights from each client and 2) for averaging them.\n",
     "\n",
-    "First, we select the aggregator"
+    "First, we select the aggregator, which in this case is the same as the server, because in the client server architecture, the server is also an aggregator."
    ]
   },
   {
@@ -261,22 +227,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator = flex_pool.aggregators"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "aggregator._models['server_10865309248']:<keras.engine.sequential.Sequential object at 0x107f65340>}\n",
-    "aggregator._models['server_10865309248']['model']:<keras.engine.sequential.Sequential object at 0x107f65340>}\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The **map** function from *FlexPool* "
+    "aggregator = flex_pool.aggregators\n",
+    "aggregator.actor_ids"
    ]
   },
   {
@@ -286,15 +238,11 @@
    "outputs": [],
    "source": [
     "def collect_weights(client_model, aggregator_model, **kwargs):\n",
-    "    # Here the server and the aggregator are the same, so we need to take the ID from the server\n",
-    "    # to select the model.\n",
-    "    # As the server has a unique ID, we don't know the ID from the server till it's created, so we\n",
-    "    # need to take the ID in this way.\n",
-    "    if 'weights' not in aggregator_model[\"server\"].keys():\n",
-    "        print(\"Aggregating weights.\")\n",
+    "    print(\"Aggregating weights.\")\n",
+    "    if 'weights' not in aggregator_model[\"server\"]:\n",
     "        aggregator_model[\"server\"]['weights'] = []\n",
-    "\n",
-    "    aggregator_model[\"server\"]['weights'].append(client_model['model'].get_weights())"
+    "    client_weights = client_model['model'].get_weights()\n",
+    "    aggregator_model[\"server\"]['weights'].append(client_weights)"
    ]
   },
   {
@@ -307,22 +255,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**# TODO: Hace falta función de COLECCIÓN de pesos y otra función de AGREGACIÓN de los pesos. Así queda más claro cual es más claro el proceso de colección y cuál es el procedimiento de agregación. Así en el proceso de colección, podemos filtrar por clientes que tengan un modelo inicializado o no.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def aggregate_weights(agg_model, *args):\n",
-    "    # agg_model[\"weights\"] = np.mean(np.array(agg_model['weights']), axis=0)\n",
-    "    agg_model[\"model\"].set_weights(np.mean(np.array(agg_model['weights']), axis=0))\n",
-    "    del agg_model[\"weights\"]"
+    "    averaged_weights = np.mean(np.array(agg_model['weights']), axis=0)\n",
+    "    agg_model[\"model\"].set_weights(averaged_weights)\n",
+    "    agg_model[\"weights\"] = []"
    ]
   },
   {
@@ -332,36 +273,6 @@
    "outputs": [],
    "source": [
     "aggregator.map(aggregate_weights)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that the aggregator has the aggregated weights, she should send it to the server. To do so, we will use the *map* function to set the new weights to the server model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def send_aggregated_weights(aggregator_model, server_model, *args, **kwargs):\n",
-    "    print(\"Sending aggregated weights to the server.\")\n",
-    "    if 'weights' not in aggregator_model.keys():\n",
-    "        raise ValueError('Aggregator should have weights')\n",
-    "    for serv in server_model:\n",
-    "        server_model[serv]['model'].set_weights(aggregator_model['weights'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aggregator.map(send_aggregated_weights, server)"
    ]
   },
   {
@@ -460,7 +371,6 @@
     "        pool.clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)\n",
     "        pool.clients.map(collect_weights, pool.aggregators)\n",
     "        pool.aggregators.map(aggregate_weights)\n",
-    "        # pool.aggregators.map(send_aggregated_weights, pool.servers) # No hace falta ahora\n",
     "        pool.servers.map(deploy_global_model_to_clients, pool.clients)\n",
     "        pool.servers.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
    ]
@@ -484,11 +394,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c16e99a8b049a3c2333046a7199861cad81dc55b88bad19d31a6edddeb39a963"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('flex')",
+   "display_name": "Python 3.9.12 ('snowflakes')",
    "language": "python",
    "name": "python3"
   },
@@ -502,9 +409,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "4f7d2a9c5c2a9c2b510c9da0e3374aeab36a589c02bbbebadbda47bfb5610ebb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
