Added some comments on a new notebook. Still needs further work

--- a/notebooks/flex_text_classification_torch_demo.ipynb
+++ b/notebooks/flex_text_classification_torch_demo.ipynb
@@ -1,30 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FLEXible tutorial: Text classification using PyTorch\n",
+    "\n",
+    "FLEXible is a library to federate models. We offer the tools to load and federate data or to load federated data, and the tools to create a federated environment. The user must define the model and the *communication primitives* to train the model in a federated environment. This primitives can be expressed in the following steps:\n",
+    "- initialization: Initialize the model in the server.\n",
+    "- deplot model: Deploy the model to the clients.\n",
+    "- training: Define the train function.\n",
+    "- collect the weights: Collect the weights of the clients params to aggregate them later.\n",
+    "- aggregate the weights: Use an aggregation method to aggregte the collected weights.\n",
+    "- deploy model: Deploy the model with the updated weights to the clients.\n",
+    "- evaluate: Define the evaluate function.\n",
+    "\n",
+    "In this notebook, we show how to implement this primitives and how to use FLEXible in orther to federate a model using TensorFlow. In this way, we will train a model using multiple clients, but without sharing any data between clients. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"PYTORCH_ENABLE_MPS_FALLBACK\"]=\"1\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%env PYTORCH_ENABLE_MPS_FALLBACK=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import torch\n",
     "from torchtext.datasets import AG_NEWS\n",
     "from torch import nn\n",
@@ -67,7 +74,7 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "# device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "# device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\") # For MAC_OS GPU\n",
     "\n",
     "def collate_batch(batch):\n",
     "    label_list, text_list, offsets = [], [], [0]\n",
