Added pytorch notebook for text classification, but still needs improvements.

--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -304,7 +304,7 @@
    "outputs": [],
    "source": [
     "def collect_weights(client_model, aggregator_model, **kwargs):\n",
-    "    print(\"Aggregating weights.\")\n",
+    "    print(\"Collecting weights.\")\n",
     "    if 'weights' not in aggregator_model[\"server\"]:\n",
     "        aggregator_model[\"server\"]['weights'] = []\n",
     "    client_weights = client_model['model'].get_weights()\n",
@@ -327,6 +327,7 @@
    "outputs": [],
    "source": [
     "def aggregate_weights(agg_model, *args):\n",
+    "    print(\"Aggregating weights\")\n",
     "    averaged_weights = np.mean(np.array(agg_model['weights']), axis=0)\n",
     "    agg_model[\"model\"].set_weights(averaged_weights)\n",
     "    agg_model[\"weights\"] = []"
